# USB-Switch

./: CH9326DLL.h  CH9326DLL64.lib  CMakeLists.txt  PCB.json  README.md  configurator.cpp  main.cpp  switcher_main.cpp
driver/: .gitignore  build.cmd  driver.inf
